Added CrossFaction Battlegrounds.

--- a/src/server/worldserver/worldserver.conf.dist
+++ b/src/server/worldserver/worldserver.conf.dist
@@ -3987,3 +3987,15 @@ Metric.OverallStatusInterval = 1
 
 #
 ###################################################################################################
+
+###################################################################################################
+#		CROSSFACTION BG CONFIG
+#			Enable Crossfaction battleground
+#			Default: 1 - on
+#					 0 - off
+#
+
+CrossfactionBG.enable = 1
+
+#
+###################################################################################################
